--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 body {
     font-family: sans-serif;
 }
-    
+
 #header {
-    border-bottom: .5rem solid LightSeaGreen;
     background-color: dimgray;
     height: 4rem;
-    border-bottom: 3rem;
-    border-bottom-color: LightSeaGreen;
-}    
+    border-bottom: 3rem LightSeaGreen;
+}
 
 * {
     margin: 0;
@@ -16,35 +14,37 @@ body {
 
 #about {
     display: flex;
+}
+
+#about img{
     height: 23.5rem;
 }
-        
+
 #about h3 {
     width: 10rem;
     margin: 0 auto;
 }
 
-h1{
+h1 {
     font-size: 1.5rem;
     color: white;
 }
-    
-title{
+
+#title {
     height: 31rem;
     background-color: lightgray;
     text-align: center;
 }
 
-h3{
+h3 {
+    text-align: center;
     color: LightSeaGreen;
     width: 18rem;
-    margin: center;
+    margin: 0 auto;
     padding-top: 1.5rem;
 }
 
-#fav
-{
+#fav {
     display: flex;
     justify-content: space-evenly
 }
-
