--- a/grid2.css
+++ b/grid2.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: url(https://cdn.imgchest.com/files/b49zcb8j3yw.png);
+    background-image: url(https://cdn.imgchest.com/files/b49zcb8j3yw.png);
     background-repeat: no-repeat;
     max-width: 1283px;
     min-height: 1434px;
