--- a/grid2.css
+++ b/grid2.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open Sans');
 
-@font-face {
-    font-family: 'Helvetica Neue';
-    src: url('https://html.ink.kg/fonts/HelveticaNeueCyr-Roman.ttf')
-}
-
-
 * {
     margin: 0;
     box-sizing: border-box;
+}
+
+html {
+    display: block;
 }
 
 body {
@@ -17,15 +15,18 @@ body {
     max-width: 1283px;
     min-height: 1434px;
     font-size: 2rem;
-    opacity: .5;
     color: blue;
+    opacity: .5;
+
 }
 
 
 .container {
     display: grid;
-    grid-template-rows: minmax(47px, auto) minmax(480px, auto) minmax(104px, auto) minmax(663px, auto) minmax(132px, auto);
-    grid-template-columns: minmax(100px, 223px) minmax(752px, 534px) minmax(427px, 92px);
+    grid-template-rows: minmax(auto, 47px) minmax(480px, auto) minmax(104px, auto) minmax(663px, auto) minmax(132px, auto);
+    grid-template-columns: minmax(20px, 100px) minmax(20px, 752px) minmax(20px, 427px);
+
+
     grid-template-areas:
         "one six six"
         "two two two"
@@ -34,83 +35,9 @@ body {
         "five five five";
 }
 
-
 .container>* {
     border: 2px dashed blue;
 }
-
-
-
-.box6 {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.box6 ul {
-    font-family: 'OpenSans';
-    font-size: 14px;
-    font-weight: 400;
-    color: #333333;
-
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-
-    /* position vertically */
-    max-width: 100%;
-    min-height: 100%;
-    align-items: center;
-
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-
-.box6 li{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-/* position horizontally */
-.rating {
-    flex-basis: 20px;
-    padding-left: 10px;
-}
-
-.join {
-    flex-basis: 20px;
-    padding-left: 18px;
-    margin: 4px
-}
-
-.profile {
-    flex-basis: 20px;
-    padding-left: 0px;
-    margin: 4px;
-}
-
-.search {
-    flex-basis: 20px;
-    margin: 0px;
-    padding-left: 0px;
-}
-
-.menu {
-    flex-basis: 20px;
-    padding-left: 6px;
-    margin: 2px;
-}
-
-.arrow {
-    flex-basis: 20px;
-    padding-left: 6px;
-    margin: 6px;
-}
-
-
 
 .box1 {
     grid-area: one;
@@ -133,9 +60,118 @@ body {
 }
 
 .box6 {
+    font-size: 14px;
     grid-area: six;
+    font-family: sans-serif;
+    background: #fff none repeat scroll 0 0;
 }
 
 .box7 {
     grid-area: seven;
+}
+
+ul {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: flex-end;
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    min-height: 100%;
+    align-items: center;
+
+    font-family: 'OpenSans';
+}
+
+
+li {
+    margin-right: 21px;
+    line-height: 44px;
+    color: #333333;
+    font-size: 1em;
+    height: auto;
+    letter-spacing: 0.3px;
+    padding: 0 0 2px;
+}
+
+
+.iconInHeader {
+    width: 16px;
+    height: 48px;
+}
+
+.iconInHeader .user {
+    background-image: url(https://who.ca-news.org/uiall-img/whoiswho/userFilled.svg);
+}
+
+.iconInHeader .user,
+.iconInHeader .search,
+.doubleArrowDown {
+    height: 16px;
+    top: 33%;
+    width: 28px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: -2px;
+    padding-left: 30px;
+}
+
+.iconInHeader .search {
+    background-image: url(https://who.ca-news.org/uiall-img/whoiswho/searchIcon.svg);
+
+}
+
+.rating {
+    margin: -6px 20px 0px -3px;
+    padding-left: 2px;
+}
+
+.join {
+    margin: -6px 24px 0px -3px;
+    padding-left: 2px;
+}
+
+.user {
+    margin: 2px 20px 0px -3px;
+    padding-left: 2px;
+}
+
+.menu {
+    letter-spacing: 2.2px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: -2px 24px 0px -3px;
+}
+
+
+
+
+.doubleArrowDown {
+    background-image: url(https://who.ca-news.org/uiall-img/whoiswho/doubleCaretDown.svg);
+    height: 11px;
+    margin: 0px 0 0 19px;
+    width: 10px;
+}
+
+@media screen and (max-width: 1200px) {
+    .grid-container {
+        grid-template-rows: minmax(47px, auto) minmax(480px, auto) minmax(104px, auto) minmax(663px, auto) minmax(132px, auto);
+        grid-template-columns: minmax(20px, 100px) minmax(20px, 752px) minmax(20px, 427px);
+    }
+}
+
+
+@media (max-width: 500px) {
+    .container {
+        grid-template-columns: minmax(20px, 100px) minmax(20px, 752px);
+        grid-template-areas:
+            "one six"
+            "two two"
+            "three three"
+            "four four"
+            "seven seven"
+            "five five";
+    }
 }
