changes made on assignment 9

--- a/grid3.css
+++ b/grid3.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open Sans');
 
+body>img:nth-of-type(1) {
+    display: none;
+}
+
 * {
     margin: 0;
     box-sizing: border-box;
@@ -95,7 +99,7 @@ li {
     padding: 0px 1px 1px 0px;
     margin: 31px 1px 30px 1px;
     border-bottom: 1px solid #333333;
-    color: red;
+    color: #333333;
     text-transform: uppercase;
     letter-spacing: 2.2px;
 }
@@ -143,8 +147,8 @@ li {
     .container {
         grid-template-columns: minmax(20px, 100px) minmax(20px, 752px);
         grid-template-areas:
-            "one six"
-            "two two"
+            "one one"
+            "six two"
             "three three"
             "four four"
             "seven seven"
