last changes made on assignment 9

--- a/grid5.css
+++ b/grid5.css
@@ -54,6 +54,7 @@ body > img:nth-of-type(1) {
     color: white;
     background-image: url('https://th.bing.com/th/id/OIG.OemMfN3Z7XlFNUIr_bB9?pid=ImgGn');
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     background-blend-mode: multiply;
